# sky_pro_h_w_8

./: pyproject.toml
config/: settings.py
materials/: models.py  serializer.py  urls.py  views.py
materials/migrations/: 0001_initial.py
users/: admin.py  models.py  serialize.py  views.py
users/management/commands/: load_payments.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_first_name_and_more.py
